dist/media/Ingress.navidrome.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: media
spec:
  rules:
    - host: navidrome.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: navidrome
                port:
                  number: 4533
            path: /
            pathType: Prefix
    - host: music.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: navidrome
                port:
                  number: 4533
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - navidrome.cmdcentral.xyz
      secretName: media-tls
